# Otomoto_data_mining

./: .gitattributes  .gitignore  .gitmodules  README.md  Requirements.txt  analysis.ipynb  data_cleaning.ipynb  herbert.ipynb  pyproject.toml  random_forest_rfecv.ipynb  requirements.txt  scrapper.py
analysis/: analysis.ipynb  data_cleaning.ipynb
data/: page_001.parquet
models/: data.md  herBERT_allegro.ipynb  herbert.ipynb  model_training.ipynb  random_forest_rfecv.ipynb  tfidf_model.ipynb  tfidf_model.py
utils/: data_utils.py  polish_stopwords.txt
