[project]
name = "otomoto-data-mining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.14.2",
    "jupyter~=1.1.1",
    "lxml==6.0.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas~=2.3.3",
    "pyarrow~=22.0.0",
    "requests~=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "spacy>=3.8.11",
    "tqdm~=4.67.1",
]
